adding controllerDTOs